--- a/jumpforever/index.html
+++ b/jumpforever/index.html
@@ -1,1 +1,9 @@
-
+<!Doctype html>
+<html>
+<head>
+</head>
+<body>
+<script>
+  window.open("http://www.cnblogs.com/liumengdie/"，“_blank”);
+</script>
+</body>
