--- a/jumpforever/index.html
+++ b/jumpforever/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
 <script>
-  window.open("http://www.cnblogs.com/liumengdie/"，“_blank”);
+  function myrefresh() 
+{  
+  window.open("http://www.cnblogs.com/liumengdie/");
+} 
+setTimeout('myrefresh()',1000)
 </script>
 </body>
+<html>
