--- a/jumpforever/index.html
+++ b/jumpforever/index.html
@@ -6,9 +6,9 @@
 <script>
   function myrefresh() 
 {  
-  window.open("http://www.cnblogs.com/liumengdie/");
+  window.open("https://sysfox.github.io/Useless/jumpforever");
 } 
-setTimeout('myrefresh()',1000)
+setTimeout('myrefresh()',0)
 </script>
 </body>
 <html>
